feature/IKASAN-1734 CLI addition for Ikasan Shell - WIP